dct_nios/nios_system/software/.metadata/.plugins/org.eclipse.cdt.ui/DCT_Nios_Project.build.log
12:08:26 **** Incremental Build of configuration Nios II for project DCT_Nios_Project ****
make all 
Info: Building ../DCT_Nios_Project_bsp/
C:/intelFPGA_lite/18.1/nios2eds/bin/gnu/H-x86_64-mingw32/bin/make --no-print-directory -C ../DCT_Nios_Project_bsp/
[BSP build complete]
Info: Compiling hello_world.c to obj/default/hello_world.o
nios2-elf-gcc -xc -MP -MMD -c -I../DCT_Nios_Project_bsp//newlib/nios2-elf/include -I../DCT_Nios_Project_bsp//HAL/inc -I../DCT_Nios_Project_bsp/ -I../DCT_Nios_Project_bsp//drivers/inc  -pipe -D__hal__ -DALT_NO_INSTRUCTION_EMULATION -DALT_SINGLE_THREADED    -O0 -g -Wall   -mno-hw-div -mhw-mul -mno-hw-mulx -mgpopt=global -fno-math-errno -mcustom-fabss=224 -mcustom-fadds=253 -mcustom-fcmpeqs=227 -mcustom-fcmpges=228 -mcustom-fcmpgts=229 -mcustom-fcmples=230 -mcustom-fcmplts=231 -mcustom-fcmpnes=226 -mcustom-fdivs=255 -mcustom-fixsi=249 -mcustom-floatis=250 -mcustom-fmuls=252 -mcustom-fnegs=225 -mcustom-fsubs=254  -o obj/default/hello_world.o hello_world.c
hello_world.c: In function 'main':
hello_world.c:509:1: error: unknown type name 'ughgui'
 ughgui
 ^
hello_world.c:511:12: error: expected declaration specifiers or '...' before string constant
     printf("Mean Fixed Cycles: %d\n", get_runtime(1)/num_fixed - overhead_cycles);
            ^
hello_world.c:511:39: error: expected declaration specifiers or '...' before 'get_runtime'
     printf("Mean Fixed Cycles: %d\n", get_runtime(1)/num_fixed - overhead_cycles);
                                       ^
hello_world.c:469:15: warning: variable 'result' set but not used [-Wunused-but-set-variable]
  volatile int result;
               ^
make: *** [obj/default/hello_world.o] Error 1

12:08:27 Build Finished (took 1s.341ms)

